--- a/pagina2.css
+++ b/pagina2.css
@@ -1,3 +1,8 @@
+main {
+  display: flex;
+  align-items: center;
+}
+
 section {
   display: flex;
   flex-direction: row;
@@ -6,6 +11,8 @@ section {
   flex-wrap: wrap;
   padding-inline: 1rem;
   min-height: 420px;
+  width: 100%;
+  height: 100%;
 }
 
 @media (max-width: 768px) {
