On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   estilosGlobales.css
	new file:   imagenes/banner1.jpg.png
	new file:   imagenes/imagenindex1.png
	new file:   imagenes/imagenindex2.png
	new file:   imagenes/oferta1.png
	new file:   imagenes/oferta2.png
	new file:   imagenes/produc1.png
	new file:   imagenes/produc2.png
	new file:   imagenes/promo3.png
	new file:   imagenes/promo4.png
	modified:   index.css
	modified:   index.html
	modified:   pagina1.css
	modified:   pagina1.html
	modified:   pagina2.html
	modified:   pagina3.css
	modified:   pagina3.html
	modified:   pagina5.css
	modified:   pagina5.html
	modified:   pagina6.css
	modified:   pagina6.html
	modified:   pagina7.css
	modified:   pagina7.html
	modified:   presentacion.css
	modified:   presentacion.html

--- a/estilosGlobales.css
+++ b/estilosGlobales.css
@@ -28,6 +28,7 @@ body {
 }
 
 body {
+  padding-top: 80px;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -38,36 +39,33 @@ body {
     135deg,
     rgb(var(--color-morado-azul) / 0.5),
     rgb(var(--color-rosa) / 0.5),
-    rgb(var(--color-salmon-claro))
+    rgb(var(--color-salmon-claro) / 0.5)
   );
 
   background-size: 300%;
-  animation: animarGradiente 15s ease infinite ;
+  animation: animarGradiente 15s ease infinite alternate;
 }
 
 @keyframes animarGradiente {
   0% {
     background-position: 0% 50%;
   }
-  50% {
-    background-position: 100% 50%;
-  }
   100% {
-    background-position: 0% 50%;
+    background-position: 50% 100%;
   }
 }
 
 header {
   /* background-color: rgb(var(--color-salmon-claro) / 0.2); */
   background-color: rgba(240, 248, 255, 0.517);
-  position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
-  /* height: 20vh; */
   flex: 2;
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px); /* Aplica desenfoque */
-  z-index: 1;
+  z-index: 10;
 
   display: flex;
   flex-direction: row;
@@ -81,6 +79,7 @@ main {
   flex: 8;
   padding: 1.5rem;
   background-color: aliceblue;
+  border-radius: 5px;
   /* height: 60vh; */
 }
 
@@ -114,7 +113,7 @@ a {
   text-decoration: none;
   position: relative;
 
-  border: 1px solid rgb(var(--color-morado-azul));
+  border: 2.3px solid rgb(var(--color-morado-azul));
   border-radius: 25px;
   padding: 5px;
   padding-inline: 18px;
