--- a/pagina1.css
+++ b/pagina1.css
@@ -1,6 +1,14 @@
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
 h1 {
   text-align: center;
+  color: rgb(var(--color-morado-azul) / 0.8);
 }
+
 section {
   display: flex;
   flex-direction: column;
@@ -10,4 +18,6 @@ section {
 
 iframe {
   max-width: 100%;
+  box-shadow: 0px 0px 4px rgb(var(--color-morado-azul) / 0.3),
+    0px 0px 15px rgb(var(--color-rosa) / 0.3);
 }
