--- a/pagina3.css
+++ b/pagina3.css
@@ -1,12 +1,3 @@
-main {
-  padding: 2rem;
-  background-color: white;
-  box-shadow: 0 0 20px rgba(var(--color-morado-azul), 0.2);
-  border-radius: 20px;
-  margin: 2rem auto;
-  max-width: 1000px;
-}
-
 h1 {
   text-align: center;
   color: rgb(var(--color-morado));
@@ -120,9 +111,17 @@ input[type='color']:hover {
   box-shadow: 0 0 10px 2px rgb(var(--color-morado-claro));
 }
 
+img {
+  object-fit: scale-down;
+}
+
 /*LA IMAGEN SE VIENE ADELANTE CUANDO PASO POR ENCIMA DE ELLA*/
 img:hover {
   transform: scale(1.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   box-shadow: 0 0 15px rgba(var(--color-morado-claro), 0.4);
+}
+
+ul {
+  list-style-type: decimal;
 }
