--- a/pagina6.css
+++ b/pagina6.css
@@ -1,3 +1,123 @@
-p {
-  color: var(--color-morado-azul);
+#musica {
+  background-color: rgba(240, 240, 255, 0.5); /* Fondo suave */
+  padding: 1.5rem;
+  border-radius: 12px;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+  max-width: 500px;
+  margin: 1rem auto;
+  text-align: center;
+}
+
+#musica p {
+  font-size: 1rem;
+  color: rgb(var(--color-morado-azul));
+  margin-bottom: 1rem;
+}
+
+audio {
+  width: 100%;
+  max-width: 400px;
+  border-radius: 10px;
+  outline: none;
+}
+
+#formulario {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-areas:
+    'datos contacto'
+    'motivo motivo'
+    'botones .';
+  gap: 2rem;
+}
+
+#datosPersonales {
+  grid-area: datos;
+}
+
+#metodosContacto {
+  grid-area: contacto;
+}
+
+#motivoConsulta {
+  grid-area: motivo;
+}
+
+#botones {
+  grid-area: botones;
+}
+
+fieldset {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 1rem;
+  border-radius: 10px;
+  border: 1px solid rgb(var(--color-rosa) / 0.5);
+  box-shadow: 0px 0px 4px rgb(var(--color-morado-azul) / 0.3),
+    0px 0px 15px rgb(var(--color-rosa) / 0.3);
+
+  > legend > h3 {
+    text-align: center;
+    font-size: 1.8rem;
+    color: rgb(var(--color-morado-azul) / 0.8);
+  }
+
+  > p {
+    font-size: 1.2rem;
+    width: fit-content;
+  }
+}
+
+input,
+textarea,
+select {
+  border-radius: 5px;
+  &:focus {
+    outline: 2px solid rgb(var(--color-rosa));
+    background-color: rgba(169, 169, 169, 0.3);
+  }
+}
+
+.boton {
+  position: relative;
+  border: 2.3px solid rgb(var(--color-morado-azul));
+  border-radius: 25px;
+  padding: 5px;
+  padding-inline: 18px;
+
+  overflow: hidden;
+  margin: 5px;
+  cursor: pointer;
+  background: linear-gradient(
+    150deg,
+    rgb(var(--color-morado-azul) / 0.5) 20%,
+    rgb(var(--color-rosa) / 0.5),
+    rgb(var(--color-salmon-claro) / 0.5)
+  );
+
+  box-shadow: 0px 0px 4px rgb(var(--color-morado-azul) / 0.5),
+    0px 0px 15px rgb(var(--color-rosa) / 0.5);
+}
+
+.obligatorio {
+  position: relative;
+  padding-inline: 1rem;
+
+  &::after {
+    content: '*';
+    position: absolute;
+    right: -5px;
+    color: rgb(255, 0, 0);
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+  }
+}
+
+input,
+select,
+textarea {
+  width: fit-content;
 }
